FIX :: overflow side bar

--- a/src/pages/Auth/Login.scss
+++ b/src/pages/Auth/Login.scss
@@ -61,6 +61,9 @@
         img {
           width: 6%;
         }
+        span {
+          color: black;
+        }
       }
       .login-btn {
         background-color: $main-red;
